# 2018_BkitVison_CUOC_DUA_SO

./: Luu y  README
Traffic sign/: cascade_left.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/mastering_ros_demo_pkg/: demo_msg.h  demo_srvRequest.h  demo_srvResponse.h
devel/lib/file_server/: file_server
devel/lib/lane_detect/: lane_detect
devel/lib/mastering_ros_demo_pkg/: demo_msg_publisher  demo_msg_subscriber  demo_topic_publisher  demo_topic_subscriber  image_transport_subscriber
devel/lib/pkgconfig/: file_server.pc  lane_detect.pc  mastering_ros_demo_pkg.pc  team207.pc  video_stream.pc
devel/lib/team207/: lane_detect  team207_node
devel/lib/video_stream/: video_stream
devel/share/file_server/cmake/: file_serverConfig.cmake
src/lane_detect/: CMakeLists.txt  package.xml
src/lane_detect/include/: carcontrol.h  detect_traffic_sign.h  detectlane.h
src/lane_detect/launch/: team207.launch
src/lane_detect/src/: Untitled-1  carcontrol.cpp  detect_traffic_sign.cpp  detectlane.cpp  main.cpp
src/team207/: CMakeLists.txt
src/team207/Obstacle/: cascade_rock.xml  cascade_small_box.xml  cascade_stacking_box_2.xml
src/team207/Traffic sign/: app  cascade_right.xml  cascade_right_2.xml  left_sign_v2.xml  right_sign_v2.xml  test.cpp
src/team207/include/: carcontrol.h  detect_obstacle.h  detect_traffic_sign.h  detectlane.h  my_define.h  polyfit.h
src/team207/launch/: team207.launch
src/team207/src/: carcontrol.cpp  carcontrol_optimized_speed_backup.cpp  detect lane 21-12  detect_obstacle.cpp  detectlane.cpp  main.cpp  polyfit.cpp
(+8 files in other folders)
